--- a/environment.yaml
+++ b/environment.yaml
@@ -2,14 +2,17 @@ name: smart-traffic-ppo
 channels:
   - conda-forge
   - defaults
+
 dependencies:
   - python=3.10
   - pip
-  - numpy
-  - matplotlib
-  - gymnasium
+  - numpy=1.26.4
+  - matplotlib=3.8.2
+  - gymnasium=0.29.1
+  - requests=2.31.0
+  - setuptools=68.2.2
+  - wheel=0.41.2
   - pip:
-      - torch
-      - sumo-rl
-      - traci
-      - requests
+      - torch==2.1.0
+      - sumo-rl==1.3.1
+      - traci==1.19.0
